welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: '=' expected but ';' found.
	do  {
^ColumnByColumn:8: error: 'while' expected but '}' found.
}
^